# thesis-artifact

./: .gitmodules  Dockerfile  README.md
HaliVer/Experiments/: .gitignore  CMakeLists.txt  README.md
HaliVer/Experiments/experiments/: run_experiments.py
HaliVer/Experiments/experiments/results/: padre-2025-03-18.xml  padre.tex  style.xsl  table.tex
HaliVer/Experiments/tests/experiment/: bilateral_grid.cpp  conv_layer.cpp  helper.h  hist.cpp
HaliVer/Experiments/tests/padre/: HalideComplex.h
HaliVer/Experiments/tests/unit/alg/: input_buffer.cpp  reduction.cpp  reduction_multi.cpp  reduction_where.cpp
HaliVer/Experiments/tests/unit/compute_at/: compute_half.cpp  compute_inline.cpp
HaliVer/Experiments/tests/unit/compute_with/: compute_with_inline.cpp  compute_with_reduction.cpp
HaliVer/Experiments/tests/unit/parallel/: seq_par.cpp
HaliVer/Experiments/tests/unit/reorder/: reorder.cpp  reorder_par_red.cpp  reorder_par_red_3.cpp  reorder_par_ser.cpp
HaliVer/Experiments/tests/unit/split/: split_shift.cpp
HaliVer/Experiments/tests/unit/store_at/: store_half.cpp  store_root.cpp  store_update.cpp
HaliVer/Experiments/tests/unit/unroll/: unroll_outer.cpp  unroll_red.cpp  unroll_ser.cpp
HaliVer/Experiments/tutorial/: lesson1.cpp  lesson3_limits.pvl  lesson3_limits_0.c
HaliVerExperiments/: CMakeLists.txt  CTestConfig.cmake
HaliVerExperiments/experiments/: experiments.txt  experiments_mem.txt  run_experiments.py  xml_to_latex.py
HaliVerExperiments/experiments/results/: exp-2025-03-18.xml  exp-mem.tex  exp.tex  table.tex
HaliVerExperiments/non_linear_triggers/: test.c  test.pvl
HaliVerExperiments/tests/: haliver.cpp
HaliVerExperiments/tests/experiment/: auto_viz.cpp  blur.cpp  camera_pipe.cpp  depthwise_separable_conv.cpp  gemm.cpp
HaliVerExperiments/tests/padre/: GenerateHalideDiagonal.cpp  GenerateHalideFull.cpp
HaliVerExperiments/tests/unit/alg/: input_floats.cpp  multidim.cpp  pure_func.cpp  reduction_bug.cpp  reduction_in_arg.cpp  reduction_multi_fail.cpp  reduction_rfactor.cpp  specialize.cpp  tuple.cpp  tuple_pipeline.cpp  update.cpp  update_full.cpp  update_full_fail.cpp
HaliVerExperiments/tests/unit/compute_at/: compute_root.cpp  compute_update.cpp
HaliVerExperiments/tests/unit/compute_with/: compute_with_half.cpp
HaliVerExperiments/tests/unit/fuse/: fuse_par.cpp  fuse_ser.cpp
HaliVerExperiments/tests/unit/limitations/: pure_func_no_bounds.cpp  pure_func_no_bounds_xyz.cpp  pure_func_no_bounds_yzx.cpp
HaliVerExperiments/tests/unit/parallel/: par_par.cpp  par_red.cpp  par_seq.cpp
HaliVerExperiments/tests/unit/reorder/: reorder_par_red_2.cpp  reorder_seq_par.cpp  reorder_seq_red.cpp
HaliVerExperiments/tests/unit/split/: split_exact.cpp  split_if.cpp  split_round.cpp
HaliVerExperiments/tests/unit/unroll/: unroll_par.cpp
HaliVerExperiments/tutorial/: lesson1.cpp  lesson2.cpp  lesson3.cpp
ThesisExamples/1-Introduction/: blur.c
ThesisExamples/2-Background/: examples-vercors.c  examples-vercors.cl  examples-vercors.pvl  gpu.cu  halide.cpp  optimised.cpp  pipeline_test.c
ThesisExamples/2-Background/resources/: pvl_examples.pvl
ThesisExamples/4-HaliVer/: blur-back.c  blur_front.pvl  count.pvl  haliver.cpp
ThesisExamples/5-PADRE/: lemmas.pvl
ThesisExamples/6-Vercors/: arrays.c  c-features.c  c-features.pvl  const_adt.pvl  fast-blur-verV8.c  gpu-features.cl  quantifiers.pvl  unique-types.c
